--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,7 +116,11 @@ a:active {
 .contactform{
   background: lightgrey;  
 }
-
+.contact-details{
+  font-size: 10px;
+  font-style: italic;
+  margin-top: 10px;
+}
   .footer {
     color: white;
     font-size: 15px;
