--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,6 +100,16 @@ a:active {
   padding-right: 0%;
   padding-top: 2%;
   padding-bottom: 0%;
+  background-color: white;
+}
+.card-title{
+  color: white;
+  border-top: 1px solid black;
+  background-color:teal;
+}
+.card-text{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: medium;
 }
 .share > button {
   background-color:teal;
